force-app/main/default/objects/PS_ASU_SP_AC_STNDV__x/PS_ASU_SP_AC_STNDV__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1EM0df1QPErPyqduFWbiIKCHhGYbL8PffIGsNFp9_z6k/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_AC_STNDVs</externalName>
    <label>Academic Standing (external)</label>
    <pluralLabel>Academic Standing (external)</pluralLabel>
</CustomObject>