force-app/main/default/objects/PS_ASU_SP_AC_STNDV__x/fields/ACAD_STNDNG_ACTN__c.field-meta.xml
<CustomField>
    <fullName>ACAD_STNDNG_ACTN__c</fullName>
    <description>Data sourced from PS_ACAD_STDNG_ACTN.ACAD_STNDNG_ACTN</description>
    <externalDeveloperName>ACAD_STNDNG_ACTN</externalDeveloperName>
    <label>Academic Standing Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>