force-app/main/default/objects/PS_ASU_SP_AC_STNDV__x/fields/DESCR__c.field-meta.xml
<CustomField>
    <fullName>DESCR__c</fullName>
    <description>Data sourced from PS_ACAD_STACTN_TBL.DESCR</description>
    <externalDeveloperName>DESCR</externalDeveloperName>
    <label>Academic Standing</label>
    <length>55</length>
    <type>Text</type>
</CustomField>