force-app/main/default/objects/PS_ASU_SP_AC_STNDV__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_ACAD_STDNG_ACTN.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Academic Standing (external)</relationshipLabel>
    <relationshipName>Academic_Standing_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>